--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="PVZ Math Game" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="theme-color" content="#028af8" />
     <link rel="stylesheet" href="/style.css">
-    <title>Phaser Vue Template</title>
+    <title>PVZ Math Game</title>
 </head>
 
 <body>
