--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="apple-mobile-web-app-title" content="Lab Defenders" />
+    <meta name="apple-mobile-web-app-title" content="PVZ Chemistry" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="theme-color" content="#028af8" />
     <link rel="stylesheet" href="/style.css">
-    <title>Lab Defenders - 实验室守卫者</title>
+    <title>PVZ Chemistry</title>
 </head>
 
 <body>
